				  older version a similar check) for new contacts,
				  making sure they do not use a spoofed IP
				- Unverified contacts are not used for routing
				  tasks
			- When reading a nodes.dat without any verified contacts
			  (possible an old file version), aMule will assume all
			  contacts to be verified to avoid slowing down the
			  connecting process
		* Fixed not sending sources for clients that did not announce
		  their part availability.
		* Fixed all list columns being disabled in case of invalid data
		  in config file.
		* Fixed directory tree not available.

	MalaPraxis:
		* Remap colours on Windows
		* Add resources
		* Fix wrong usage of CPath::IsOk which caused an infinite loop on Import
		* Fix wxTempFile usage for compressed IPFilter files

	Phoenix:
		* Removed the dlopen() code from UPnP.cpp.
		* Added the m4 macro to test for libupnp.
		* Updated amule_build_install.sh to work with
		  --with-libupnp-prefix.
		* Changed the UPnP code to allow the use of a service without
		  having successfully subscribed to it. That should be enough
		  to deal with some lazy router implementations.
		* Do not unregister if no service is found
		* Save the found service even if subscription has failed
		* Fix for initialization of "resultstr" in cryptopp.m4.
		* Fix for message "Duplicate partfile with hash..." in
		  DonwloadQueue.cpp. It was using deleted corrupted data.
		* amule_build_install.sh now uses -a flag in unzip so that
		  cryptopp files are properly converted from DOS text format.

	Stu Redman:
		* Scanner fix for MSVC compilation
		* Fixed crash when progress bar was resized to zero width
		* Fixed sharing of large files on Windows
		* Fixed free disc space check
		* Sanity check before writing nodes.dat - don't write it 
		  if there are less than 25 contacts
		* Download List sorted on startup

	Wuischke:
		* Show connection status in toolbar when changing skin, thanks to greek

	xor:
		* Fix window resize problem on Mac OS X
